--- a/templates/commons/library.html
+++ b/templates/commons/library.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="light-pink-box mt-5 px-5 pb-4" style="box-shadow: none; margin-bottom: 50px;">
+        <div class="library-result-box light-pink-box mt-5 px-5 pb-4" style="box-shadow: none; margin-bottom: 50px;">
         <div class="row pt-4">
             <div class="d-flex mb-2">
                 <div class="col-lg-2 col-md-2 text-center text-style-ro-22b" style="color: #100F0E;">
@@ -113,18 +113,18 @@
                         <span class="text-style-ro-14">| Carbon Fibre Layup</span>
                         <span class="text-style-ro-14">| Material Testing</span>
                     </div>
-                    <div>
+                    <!-- <div>
                         <span class="text-style-ro-14">Quick Learner |</span>
                         <span class="text-style-ro-14">Detaik-Oriented |</span>
                         <span class="text-style-ro-14">Hard Working |</span>
                         <span class="text-style-ro-14" style="color: #FD602C !important;">Personality</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
 
             <!-- Dropdown data -->
-            <div class="dropdown-div col-lg-11 container-fluid justify-content-center px-4 pt-4 pb-3" style="visibility: hidden; display: none; background: #fff; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1); margin-top: 0.015em;">
+            <div class="dropdown-div col-11 container-fluid justify-content-center px-md-3 px-lg-4 px-4 pt-md-3 pt-lg-4 pt-4 pb-3" style="visibility: hidden; display: none; background: #fff; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1); margin-top: 1px;">
                 <div class="row">
                     <div class="d-flex">
                         <div class="col-2">
@@ -182,7 +182,7 @@
                         </div>
                         <div class="col-3 ms-2">
                             <div class="ps-4">
-                                <button data-student-id="{{ student.id }}" class="connect-button orange-button text-style-ro-24b" style="width: 70% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">CONNECT</button>
+                                <button data-student-id="{{ student.id }}" class="connect-button orange-button text-style-ro-24b" style="font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">CONNECT</button>
                             </div>
 
                             <!-- <div class="ps-4">
@@ -391,7 +391,7 @@
                         </div>
                         <div class="col-3 ms-2">
                             <div class="ps-4">
-                                <button class="connect-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">CONNECT</button>
+                                <button class="connect-button orange-button text-style-ro-24b" style="font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">CONNECT</button>
                             </div>
                         </div>
                     </div>
