--- a/templates/commons/dashboard.html
+++ b/templates/commons/dashboard.html
@@ -60,9 +60,14 @@
 {% load crispy_forms_tags %}
 
 {% block title %}Django CRM - Dashboard{% endblock %}
+
+{% block script %}
+    <script src="{% static 'dashboard.js' %}"></script>
+{% endblock %}
+
 {% block body %}
 <div class="col-12 px-4 py-5 col container-fluid" style="width: 100%; height: 100%;">
-    <div class="light-pink-box-without-shadow p-5" style="height: 100%;">
+    <div class="light-pink-box-without-shadow dashboard-container p-5" style="height: 100%;">
         <div class="light-pink-box-border d-flex align-items-center" style="height: 100%;">
             <div class="d-flex align-items-center">
                 <div class="col-4">
@@ -71,7 +76,7 @@
                 <div class="col-8 text-center">
                     <div class="text-style-ro-60b" style="background: linear-gradient(to right, #ED1C24, #FF6B2C); -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;">COMING SOON</div>
-                    <div class="mt-1 mb-3 mx-5 px-5" style="">
+                    <div class="dashboard-line mt-1 mb-3 mx-md-3 mx-lg-4 mx-xl-5 mx-5 px-md-2 px-lg-3 px-xl-5 px-5" style="">
                         <div style="box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.25);">
                             <div style="height: 3px; background-color: #FD612C;"></div>
                         </div>
