--- a/templates/commons/info.html
+++ b/templates/commons/info.html
@@ -94,22 +94,22 @@
 {% endblock %}
 
 {% block body %}
-<div id="info-body" class="col-12 px-4 py-5 d-flex justify-content-center" style="height: 100%;">
-    <div class="col-12 light-pink-box-without-shadow pb-5" style="height: 100%;">
+<div id="info-body" class="col-12 px-4 py-md-4 py-lg-4 py-xl-5 py-5 d-flex justify-content-center" style="height: 100%;">
+    <div class="col-12 light-pink-box-without-shadow pb-md-4 pb-xl-5 pb-5" style="height: 100%;">
         <!-- How to use search - info -->
         {% if library == "False" %}
         <div id="info-search">
-            <div class="d-flex justify-content-center mt-5">
+            <div class="d-flex justify-content-center mt-md-4 mt-lg-4 mt-xl-5 mt-5">
                 <div class="text-style-ro-30b px-5" style="color: white; background-color: #ED1C24; border-radius: 20px;">HOW TO USE SEARCH?</div>
             </div>
-            <div class="col-12 px-5" style="width: 100%;">
-                <div class="col-12 mt-5 pt-5" style="border: 3px solid #FF6B2C; border-radius: 20px;">
+            <div class="col-12 px-md-4 px-lg-4 px-xl-5 px-5" style="width: 100%;">
+                <div class="col-12 mt-md-4 mt-lg-4 mt-xl-5 mt-5 pt-5" style="border: 3px solid #FF6B2C; border-radius: 20px;">
                     <!-- How to use search 1 -->
                     <div class="d-flex justify-content-center pb-3">
                         <div class="col-10 d-flex justify-content-center info-search-div-one">
                             <div class="info-images-div d-flex justify-content-between px-2">
-                                <div class="ps-5"><img class="img-fluid" style="width: 60%;" src="{% static 'images/side_menu1.png' %}"></div>
-                                <div class="pe-5">
+                                <div class="ps-md-1 ps-lg-1 ps-xl-5 ps-5"><img class="img-fluid" style="width: 60%;" src="{% static 'images/side_menu1.png' %}"></div>
+                                <div class="pe-md-1 pe-lg-1 pe-xl-5 pe-5">
                                     <div class="text-style-ro-20b">SELECT SEARCH TAB</div>
                                     <div class="text-style-ro-16 mt-2">
                                         <ul>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 2 -->
                     <div class="d-flex justify-content-center pt-3 pb-3">
                         <div class="col-11 d-flex justify-content-center">
@@ -155,11 +155,11 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 3 -->
                     <div class="d-flex justify-content-center pt-3 pb-3">
                         <div class="col-10 d-flex justify-content-center">
-                            <div class="col-12 mt-5">
+                            <div class="col-12 mt-md-4 mt-lg-5 mt-xl-5 mt-5">
                                 <div class="row d-flex">
                                     <div class="col-7 ps-3">
                                         <div class="d-flex justify-content-center">
@@ -171,12 +171,12 @@
                                         <div class="pe-4 mt-3"><img class="img-fluid info-search-div-three-image-two" style="width: 70%;" src="{% static 'images/position_and_search.png' %}"></div>
                                     </div> 
                                 </div>
-                                <div class="d-flex justify-content-center mt-5">
+                                <div class="d-flex justify-content-center mt-md-4 mt-lg-5 mt-5">
                                     <div class="col-8">
                                         <div class="text-style-ro-20b ps-2">CLICK ON SEARCH BUTTON</div>
                                     </div>
                                 </div>
-                                <div class="d-flex justify-content-center mt-3">
+                                <div class="d-flex justify-content-center mt-md-2 mt-lg-3 mt-3">
                                     <div class="col-8">
                                         <ul class="text-style-ro-16">
                                             <li>When Search Categories Have Been Selected, Click On <span style="color: #FF6B2C;">SEARCH</span> Button On Bottom Right Of The Page To See Search List Of Available People</li>
@@ -187,10 +187,10 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 4 -->
                     <div class="d-flex justify-content-center mt-1 pt-3 pb-3">
-                        <div class="col-12 mt-5">
+                        <div class="col-12 mt-md-3 mt-lg-4 mt-xl-5 mt-5">
                             <div class="d-flex justify-content-center "><img class="img-fluid" style="width: 25%;" src="{% static 'images/filter.png' %}"></div>
                             <div class="d-flex justify-content-center mt-4">
                                 <div class="col-8">
@@ -208,10 +208,10 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 5 -->
                     <div class="d-flex justify-content-center pt-3 pb-3">
-                        <div class="info-images-div col-12 mt-5 px-4" id="info-images-div">
+                        <div class="info-images-div col-12 mt-md-4 mt-lg-5 mt-5 px-4" id="info-images-div">
                             <div class="d-flex justify-content-center text-style-ro-30b pb-2 filter-search-categories-div">FILTER SEARCH CATEGORIES</div>
                             <div class="d-flex justify-content-center mt-4">
                                 <div class="col-10 white-box d-flex align-items-center py-3">
@@ -258,12 +258,12 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 6 -->
                     <div class="d-flex justify-content-center">
-                        <div class="col-10 info_search_div_six">
+                        <div class="col-10 info-search-div-six">
                             <div class="position-relative" style="width: 100%;">
-                                <img class="img-fluid" src="{% static 'images/student_select.png' %}" style="width: 100%;">
+                                <img class="img-fluid py-md-5 py-lg-4 py-xl-0" src="{% static 'images/student_select.png' %}" style="width: 100%;">
                                 <div class="position-absolute select-student-image-div">
                                     <div class="text-style-ro-20b">SELECT A STUDENT</div>
                                     <div class="mt-2 text-style-ro-16">
@@ -276,10 +276,10 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-md-2 mt-lg-3 mt-xl-5 mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 7 -->
                     <div class="d-flex justify-content-center">
-                        <div class="col-12 mt-5">
+                        <div class="col-12 mt-md-4 mt-lg-4 mt-xl-5 mt-5">
                             <div class="d-flex justify-content-center mt-4 px-3">
                                 <div class="col-9">
                                     <div class="text-style-ro-20b ps-2">SAVE SELECTED STUDENT</div>
@@ -311,16 +311,16 @@
         {% else %}
          <!-- How to use library - info -->
         <div id="info-library">
-            <div class="d-flex justify-content-center mt-5">
+            <div class="d-flex justify-content-center mt-md-4 mt-lg-4 mt-xl-5 mt-5">
                 <div class="text-style-ro-30b px-5" style="color: white; background-color: #ED1C24; border-radius: 20px;">HOW TO USE LIBRARY?</div>
             </div>
-            <div class="col-12 px-5" style="width: 100%;">
-                <div class="col-12 mt-5 pt-5" style="border: 3px solid #FF6B2C; border-radius: 20px;">
+            <div class="col-12 px-md-4 px-lg-4 px-xl-5 px-5" style="width: 100%;">
+                <div class="col-12 mt-md-4 mt-xl-5 mt-5 pt-5" style="border: 3px solid #FF6B2C; border-radius: 20px;">
                     <!-- How to use library 1 -->
                     <div class="d-flex justify-content-center pt-2">
-                        <div class="col-10 d-flex justify-content-center px-5">
-                            <div class="ps-5"><img class="img-fluid" style="width: 70%;" src="{% static 'images/library_side_menu.png' %}"></div>
-                            <div class="pe-5">
+                        <div class="col-10 d-flex justify-content-center px-md-1 px-lg-2 px-xl-5 px-5">
+                            <div class="ps-md-3 ps-lg-4 ps-xl-5 ps-5"><img class="img-fluid" style="width: 70%;" src="{% static 'images/library_side_menu.png' %}"></div>
+                            <div class="pe-md-3 pe-lg-4 pe-xl-5 pe-5">
                                 <div class="text-style-ro-20b">SELECT LIBRARY TAB</div>
                                 <div class="text-style-ro-16 mt-2">
                                     <ul>
@@ -332,21 +332,21 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use library 2 -->
                     <div class="info-library d-flex justify-content-center mt-5">
                         <div class="info-library-div-two col-10 px-1">
                             <div class="col-9">
-                                <div class="text-style-ro-20b ps-5">STATUS IN LIBRARY</div>
-                                <div class="text-style-ro-16 ps-5 pe-5 mt-2">
+                                <div class="text-style-ro-20b ps-md-2 ps-lg-2 ps-xl-5 ps-5">STATUS IN LIBRARY</div>
+                                <div class="text-style-ro-16 ps-md-2 ps-lg-2 ps-xl-5 ps-5 pe-5 mt-2">
                                     <ul>
                                         <li>In Top left Corner You Can See Current Status Of Your Library. It Shows How Many Contacts You Have Saved And How Many Contacts You Have Connected To</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between pt-3 col-12">
-                                <div class="ps-5">
-                                    <div class="text-style-lato-20b d-flex align-items-center px-4 py-2" style="background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); border-radius: 10px; color: white;">
+                                <div class="ps-md-3 ps-xl-5 ps-5">
+                                    <div class="info-library-text-box text-style-lato-20b d-flex align-items-center px-md-2 px-xl-4 py-md-1 py-xl-2 py-2" style="background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); border-radius: 10px; color: white;">
                                         <span id="saved-item">SAVED  &nbsp; | &nbsp; 23</span>
                                         <span id="connected-item" class="ps-4">CONNECTED &nbsp; | &nbsp; 6</span>
                                     </div>
@@ -356,9 +356,9 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use library 3 -->
-                    <div class="d-flex justify-content-center mt-5">
+                    <div class="d-flex justify-content-center mt-md-4 mt-xl-5 mt-5">
                         <div class="col-9">
                             <div class="d-flex align-items-center">
                                 <div class="col-6 d-flex justify-content-center"><img class="img-fluid info-lib-div-three-image-one" style="" src="{% static 'images/user_research.png' %}"></div>
@@ -377,7 +377,7 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use library 4 -->
                     <div class="d-flex justify-content-center mt-5">
                         <div class="col-10">
@@ -397,7 +397,7 @@
                         </div>
                     </div>
                     <!-- Scroll button -->
-                    <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
+                    <div class="d-flex justify-content-center mt-5"><img class="scroll-button-img img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use library 5 -->
                     <div class="d-flex justify-content-center mt-5 mb-5">
                         <div class="col-9">
