--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -122,9 +122,9 @@
               </div> -->
             </div>
         <footer id="footer" style="bottom: 0; width: 100%;">
-            <nav class="navbar navbar-expand-lg footer-custom" style="">
+            <nav class="navbar navbar-expand-sm footer-custom" style="">
                 <div class="container-fluid px-5">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"  aria-expanded="false">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo02" style="color: white;">
