--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -257,6 +257,17 @@
                 color: #FF6B2C !important;
             }
 
+            @media screen and (max-width: 3000px) {
+
+                .text-style-ro-32b {
+                    font-size: 28px;
+                }
+
+                .text-style-ro-60 {
+                    font-size: 45px;
+                }
+            }
+
             @media screen and (min-width: 3000px) {
 
                 .text-style-ro-14l {
@@ -315,14 +326,14 @@
 
 <body>
     <div class="row m-0" style="width: 100%; height: 100%;">
-    <div class="first-container container-fluid d-none d-sm-block col-lg-6 col-md-6 d-sm-flex justify-content-center align-items-center" style=" overflow: auto; min-height: 100vh;">
+    <div class="first-container container-fluid d-none d-sm-block col-lg-5 col-xl-6  d-sm-flex justify-content-center align-items-center" style=" overflow: auto; min-height: 100vh;">
         <div class="d-flex flex-column container-fluid align-items-center justify-content-center">
             <p class="text-style-ro-60">"To find the solution to your problem, you only need to find us."</p>
             <p style="margin-top: 50px; font-weight: 900 !important;" class="text-style-ro-60">SHERLOOK</p>
         </div>
     </div>
 
-    <div class="col-lg-6 col-md-6 px-0" style="display: flex; flex-direction: column; height: calc(100% - 70px);">
+    <div class="col-lg-7 col-xl-6 px-0" style="display: flex; flex-direction: column; height: calc(100% - 70px);">
         <header>
             <nav class="navbar navbar-expand-lg navbar-custom">
                 <div class="container-fluid">
