--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -55,7 +55,7 @@
                     <div class="text-style-ro-24b" style="color: black;">
                         POSITION
                     </div>
-                    <div class="search-dropdown dropdown mt-md-3 mt-lg-4 mt-4 mx-md-3 mx-lg-4 mx-xl-5 mx-5 py-2">
+                    <div class="search-dropdown dropdown mt-sm-2 mt-md-3 mt-lg-4 mt-4 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5 mx-5 py-2">
                         <button class="search-dropdown-button dropdown d-flex justify-content-between align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {% with position=request.GET.position|default:"" %}
                                 {% if not position %}
@@ -83,7 +83,7 @@
                     <div class="text-style-ro-24b" style="color: black;">
                         SPECIALIZATION
                     </div>
-                    <div class="search-dropdown dropdown mt-md-3 mt-lg-4 mt-4 mx-md-3 mx-lg-4 mx-xl-5 mx-5 py-2">
+                    <div class="search-dropdown dropdown mt-sm-2 mt-md-3 mt-lg-4 mt-4 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5 mx-5 py-2">
                         <button class="search-dropdown-button dropdown d-flex justify-content-between align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {% with  specialization=request.GET.specialization|default:"" %}
                                 {% if not specialization %}
@@ -111,7 +111,7 @@
                     <div class="text-style-ro-24b" style="color: black;">
                         COUNTRY
                     </div>
-                    <div class="search-dropdown dropdown mt-md-3 mt-lg-4 mt-4 mx-md-3 mx-lg-4 mx-xl-5 mx-5 py-2">
+                    <div class="search-dropdown dropdown mt-sm-2 mt-md-3 mt-lg-4 mt-4 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5 mx-5 py-2">
                         <button class="search-dropdown-button dropdown d-flex justify-content-between align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {% with  country=request.GET.country|default:"" %}
                                 {% if not country %}
@@ -171,7 +171,7 @@
                     </div>
                 </div>
             </div> -->
-            <div class="d-flex col-12 justify-content-end mt-5 px-md-2 px-lg-5 px-5 mb-5 align-items-center">
+            <div class="d-flex col-12 justify-content-end mt-5 px-sm-1 px-md-2 px-lg-5 px-5 mb-5 align-items-center">
                 <div class="d-flex justify-content-center align-items-center">
                     <button id="search" class="d-flex align-items-center justify-content-center search-button orange-button text-style-ro-24b" style="font-weight: 400 !important;">
                         SEARCH
@@ -191,7 +191,7 @@
     <div class="search-result-box light-pink-box mt-5 px-5 pb-4" style="box-shadow: none; margin-bottom: 50px;">
         <div class="row pt-4">
             <div class="d-flex mb-2">
-                <div class="col-lg-2 col-md-2 text-center text-style-ro-22b" style="color: #100F0E;">
+                <div class="col-lg-2 col-md-2 col-sm-2 text-center text-style-ro-22b" style="color: #100F0E;">
                    POSITION
                     <!-- <div class="dropdown">
                         <button class="dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none; background-color: transparent;">
@@ -205,7 +205,7 @@
                     </div> -->
                 </div>
                 
-                <div class="col-lg-3 col-md-3 text-center text-style-ro-22b" style="color: #100F0E;">
+                <div class="col-lg-3 col-md-3 col-sm-3 text-center text-style-ro-22b" style="color: #100F0E;">
                     SPECIALIZATION
                     <!-- <div class="dropdown">
                         <button class="dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none; background-color: transparent;">
@@ -218,7 +218,7 @@
                         </ul>
                     </div> -->
                 </div>
-                <div class="col-lg-2 col-md-2 text-center text-style-ro-22b" style="color: #100F0E;">
+                <div class="col-lg-2 col-md-2 col-sm-2 text-center text-style-ro-22b" style="color: #100F0E;">
                     COUNTRY
                     <!-- <div class="dropdown">
                         <button class="dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none; background-color: transparent;">
@@ -231,7 +231,7 @@
                         </ul>
                     </div> -->
                 </div>
-                <div class="col-lg-1 col-md-1 text-center text-style-ro-22b" style="color: #100F0E;">
+                <div class="col-lg-1 col-md-1 col-sm-1 text-center text-style-ro-22b" style="color: #100F0E;">
                     AGE
                     <!-- <div class="dropdown">
                         <button class="dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none; background-color: transparent;">
@@ -244,12 +244,12 @@
                         </ul>
                     </div> -->
                 </div>
-                <div id="experience"  class="col-lg-2 col-md-2 text-center text-style-ro-22b" style="color: #100F0E;">
+                <div id="experience"  class="col-lg-2 col-md-2 col-sm-2 text-center text-style-ro-22b" style="color: #100F0E;">
                     EXPERIENCE
                     <i class="fa-solid fa-chevron-down dropdown-icon" style="font-size: 1.5vw;"></i>
 
                 </div>
-                <div class="col-lg-2 col-md-2 pe-4 text-center text-style-ro-22b" style="color: #100F0E;">
+                <div class="col-lg-2 col-md-2 col-sm-2 pe-4 text-center text-style-ro-22b" style="color: #100F0E;">
                     STATUS
                     <!-- <div class="dropdown">
                         <button class="dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none; background-color: transparent;">
